got list working

--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -37,7 +37,7 @@
             </li>
             <li class = "">
                 <a href = "#">
-                    <span class = "glyphicon glyphicon-signal" aria-hidden = "true"></span>&nbsp;Analytics
+                    <span class = "glyphicon glyphicon-stats" aria-hidden = "true"></span>&nbsp;Analytics
                 </a>
             </li>
         </ul>
