--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -6,7 +6,7 @@
     {% load staticfiles %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     {#Import remote bootstrap file first #}
-    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair|Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -50,7 +50,7 @@
 {#        </form>#}
         <ul class = "nav navbar-nav navbar-right">
              <li class = "">
-                <a href = "#">
+                <a href = {% url 'portfolio:company-add' %}>
                     <span class = "glyphicon glyphicon-plus" aria-hidden = "true"></span>&nbsp;Add Share
                 </a>
             </li>
