--- a/portfolio/templates/portfolio/detail.html
+++ b/portfolio/templates/portfolio/detail.html
@@ -1,8 +1,24 @@
 {% extends 'portfolio/base.html' %}
-{% block title %} Stock Details {% endblock %}
+{% block title %} Share Details {% endblock %}
 {% block body %}
 
 
+<h1>{{ company.ticker }}</h1>
+
+<ul>
+    {% for stock in company.stock_set.all %}
+    <li>${{ stock.price_paid }} - {{ stock.quantity }}</li>
+    {% endfor %}
+</ul>
 
 
+
+ <form action = "{% url 'portfolio:stock-add' %}" method = 'post' style = "display: inline;">
+         {% csrf_token %}
+         <p>Add Stock to Company<p>
+
+         <button type = "submit" class = "btn btn-default btn-sm">
+           <span class = "glyphicon glyphicon-plus"></span>
+         </button>
+       </form>
 {%  endblock %}
