--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -30,13 +30,13 @@
     <div class="collapse navbar-collapse" id = "topNavBar">
 {#        These are the items to be collapsed, identified by topNavBar#}
         <ul class="nav navbar-nav">
-            <li class = "active">
-                <a href = {% url 'portfolio:index' %}>
+            <li class = "">
+                <a href = {% url 'portfolio:pv' %}>
                     <span class = "glyphicon glyphicon-book" aria-hidden = "true"></span>&nbsp;Portfolio
                 </a>
             </li>
             <li class = "">
-                <a href = "#">
+                <a href = {% url 'portfolio:analytics' %}>
                     <span class = "glyphicon glyphicon-stats" aria-hidden = "true"></span>&nbsp;Analytics
                 </a>
             </li>
@@ -49,11 +49,13 @@
 {#                <button type = "submit" class = "btn btn-default">Search</button>#}
 {#        </form>#}
         <ul class = "nav navbar-nav navbar-right">
-             <li class = "">
-                <a href = {% url 'portfolio:company-add' %}>
-                    <span class = "glyphicon glyphicon-plus" aria-hidden = "true"></span>&nbsp;Add Share
+
+         <li class = "">
+                <a href = {% url 'portfolio:import' %}>
+                    <span class = "glyphicon glyphicon-cloud-upload" aria-hidden = "true"></span>&nbsp;Import Portfolio
                 </a>
             </li>
+
 
              <li class = "">
                 <a href = "#">
