--- a/portfolio/templates/portfolio/analytics.html
+++ b/portfolio/templates/portfolio/analytics.html
@@ -15,4 +15,14 @@
 {% endfor %}
 
 
+<form action = "" method = 'post' style="position: absolute; bottom: 5px;">
+         {% csrf_token %}
+         <h3 style = "padding-left: 5px; font-family: 'Roboto'; font-size: 20px;">Analyze</h3>
+
+         <button type = "submit" class = "btn btn-default btn-lg">
+           <span class = "glyphicon glyphicon-stats"></span>
+         </button>
+       </form>
+
+
 {%  endblock %}
